[package]
name = "zup-quickstart"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"

[[example]]
name = "leds-on"
required-features = ["pac"]

[[example]]
name = "leds-off"
required-features = ["pac"]

[[example]]
name = "ipi"
required-features = ["pac"]

[[example]]
name = "ipi-apu"
required-features = ["pac"]

[[example]]
name = "rtfm-interrupt"
required-features = ["pac"]

[[example]]
name = "rtfm-lock"
required-features = ["pac"]

[[example]]
name = "rtfm-message"
required-features = ["pac"]

[[example]]
name = "rtfm-time"
required-features = ["pac"]

[[example]]
name = "rtfm-time-2"
required-features = ["pac"]

[dependencies]
panic-halt = "0.2.0"
zup = { path = "../zup", optional = true }
zup-rt = { path = "../zup-rt" }
zup-rtfm = { path = "../zup-rtfm", optional = true }

[dependencies.panic-dcc]
branch = "ufmt"
git = "https://github.com/japaric/arm-dcc"

[dev-dependencies]
cortex-r = { path = "../cortex-r" }
ufmt = "0.1.0-beta.4"

[dev-dependencies.arm-dcc]
branch = "ufmt"
features = ["inline-asm"]
git = "https://github.com/japaric/arm-dcc"

[features]
pac = ["zup", "zup-rtfm"]
