[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "zup-rt"
version = "0.1.0"

[dependencies]
cortex-r = { path = "../cortex-r" }
ufmt = "0.1.0-beta.4"
zup-rt-macros = { path = "macros" }

[dependencies.arm-dcc]
branch = "ufmt"
git = "https://github.com//japaric/arm-dcc"
