[package]
name = "zup-rtfm"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"

[lib]
name = "rtfm"

[dependencies]
cortex-r = { path = "../cortex-r" }
microamp = { git = "https://github.com/japaric/microamp" }
spin = "0.5.0"
zup = { path = "../zup" }
zup-rt = { path = "../zup-rt" }
zup-rtfm-macros = { path = "macros" }

[dependencies.heapless]
features = ["const-fn"]
git = "https://github.com/japaric/heapless"
rev = "ade3f5ecbf55fc803a87555ab4061145a95fe4d5"

[dev-dependencies]
ufmt = "0.1.0-beta.4"

[dev-dependencies.arm-dcc]
branch = "ufmt"
features = ["inline-asm"]
git = "https://github.com/japaric/arm-dcc"

[dev-dependencies.panic-dcc]
branch = "ufmt"
git = "https://github.com/japaric/arm-dcc"
