[package]
name = "cargo-microamp"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"

[dependencies]
cargo-project = "0.2.1"
clap = "2.32.0"
exitfailure = "0.5.1"
failure = "0.1.5"
filetime = "0.2.4"
rustc_version = "0.2.3"
walkdir = "2.2.7"
xmas-elf = "0.6.2"
tempdir = "0.3.7"
